adds user submission table & migrations stores users when they hit the retweet button extends session user with more twitter fields adds local compose file
Signed-off-by: stadolf <stadolf@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "sqltools.connections": [
+    {
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 5433,
+      "driver": "PostgreSQL",
+      "name": "bioacc",
+      "database": "bioacc",
+      "username": "bioacc",
+      "password": "bioacc"
+    }
+  ]
 }
