--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix",
+		"migrate": "env-cmd -f .env.local --fallback --no-override pnpm dlx vite-node components/backend/migrate.ts"
 	},
 	"dependencies": {
 		"@nextui-org/button": "2.0.34",
@@ -41,14 +42,21 @@
 		"eslint-plugin-unused-imports": "^3.2.0",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"kysely": "^0.27.3",
 		"next": "14.2.3",
 		"next-auth": "5.0.0-beta.19",
 		"next-themes": "^0.2.1",
+		"pg": "^8.12.0",
 		"postcss": "8.4.38",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.1.6"
+	},
+	"devDependencies": {
+		"@types/pg": "^8.11.6",
+		"env-cmd": "^10.1.0",
+		"vite-node": "^1.6.0"
 	}
 }
