--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@nextui-org/system": "2.2.1",
 		"@nextui-org/table": "^2.0.36",
 		"@nextui-org/theme": "2.2.5",
+		"@nextui-org/user": "^2.0.31",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
 		"@types/node": "20.5.7",
