adds viem/wagmi & connectkit & eas with ethers configures wallet connect domain secret
Signed-off-by: stadolf <stadolf@gmail.com>

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ AUTH_TWITTER_SECRET=
 AUTH_SECRET=<openssl rand -base64 32>
 AUTH_TRUST_HOST=true
 POSTGRES_URL=postgres://bioacc:bioacc@127.0.0.1:5433/bioacc
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
