--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"migrate": "env-cmd -f .env.local --fallback --no-override pnpm dlx vite-node components/backend/migrate.ts"
 	},
 	"dependencies": {
+		"@ethereum-attestation-service/eas-sdk": "^2.3.0",
+		"@ethersproject/providers": "^5.7.2",
 		"@nextui-org/button": "2.0.34",
 		"@nextui-org/code": "2.0.29",
 		"@nextui-org/input": "2.2.2",
@@ -25,13 +27,16 @@
 		"@nextui-org/user": "^2.0.31",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@tanstack/react-query": "^5.45.1",
 		"@types/node": "20.5.7",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
 		"@typescript-eslint/eslint-plugin": "^7.10.0",
 		"@typescript-eslint/parser": "^7.10.0",
+		"@wagmi/core": "^2.11.4",
 		"autoprefixer": "10.4.19",
 		"clsx": "2.1.1",
+		"connectkit": "^1.8.2",
 		"eslint": "^8.56.0",
 		"eslint-config-next": "14.2.1",
 		"eslint-config-prettier": "^8.2.0",
@@ -42,6 +47,7 @@
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "^3.2.0",
+		"ethers": "^6.13.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"kysely": "^0.27.3",
@@ -55,7 +61,9 @@
 		"swr": "^2.2.5",
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
-		"typescript": "5.1.6"
+		"typescript": "5.1.6",
+		"viem": "2.x",
+		"wagmi": "^2.10.4"
 	},
 	"devDependencies": {
 		"@types/pg": "^8.11.6",
